-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
3
-
9223372036854775807
In case of DISP_OPEN_CREATE client waits for valid fid value in reply when it_status == 0.
When reint_open returns ENOENT fid is not set and client gets fid filled by 0. This may cause following panic:
> LustreError: 19177:0:(llite_lib.c:2178:ll_prep_inode()) ASSERTION( fid_is_sane(&md.body->fid1) ) failed: > LustreError: 19177:0:(llite_lib.c:2178:ll_prep_inode()) LBUG > Pid: 19177, comm: cp > > Call Trace: > [<ffffffff81006109>] try_stack_unwind+0x169/0x1b0 > [<ffffffff81004b99>] dump_trace+0x89/0x440 > [<ffffffffa036b8c7>] libcfs_debug_dumpstack+0x57/0x80 [libcfs] > [<ffffffffa036be27>] lbug_with_loc+0x47/0xc0 [libcfs] > [<ffffffffa0a21184>] ll_prep_inode+0xc04/0xe40 [lustre] > [<ffffffffa0a34721>] ll_create_nd+0x3d1/0xec0 [lustre] > [<ffffffff81163fe9>] vfs_create+0xa9/0xf0 > [<ffffffff811646aa>] do_last+0x67a/0x7d0 > [<ffffffff81165358>] path_openat+0xc8/0x3d0 > [<ffffffff81165788>] do_filp_open+0x48/0xa0 > [<ffffffff8115651e>] do_sys_open+0x16e/0x240 > [<ffffffff81156630>] sys_open+0x20/0x30 > [<ffffffff815662eb>] system_call_fastpath+0x16/0x1b > [<00007fc9c3726790>] 0x7fc9c3726790
We faced the issue on DNE setup. For unknown reason(possibly failover) FLDB on master mdt didn't include OST seq ranges.
We faced above panic every time after trying to create regular file in directory located on mdt1.
- is duplicated by
-
LU-7798 ll_prep_inode()) ASSERTION( fid_is_sane(&md.body->mbo_fid1) ) failed:
-
- Resolved
-