LU-7422 mdt: fix ENOENT handling in mdt_intent_reint

In case of DISP_OPEN_CREATE client waits for valid
fid value in reply when it_status == 0.
When reint_open returns ENOENT fid is not set and
client gets fid filled by 0. This may cause following
panic:
ll_prep_inode()) ASSERTION( fid_is_sane(&md.body->fid1) )

Change-Id: I1c8821f547de11709663565ce509044613564bc5
Signed-off-by: Sergey Cheremencev <sergey.cheremencev@seagate.com>
Xyratex-bug-id: MRP-3073
Reviewed-by: Artem Blagodarenko <artem.blagodarenko@seagate.com>
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@seagate.com>
Reviewed-by: Alexey Leonidovich Lyashkov <alexey.lyashkov@seagate.com>
Tested-by: Elena V. Gryaznova <elena.gryaznova@seagate.com>
Reviewed-on: http://review.whamcloud.com/17177
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>