lustre/mdt/mdt_handler.c
@@ -3283,8 +3283,9 @@ static int mdt_intent_reint(enum mdt_it_code opcode,
 	rep->lock_policy_res2 = clear_serious(rc);
 
         if (rep->lock_policy_res2 == -ENOENT &&
-            mdt_get_disposition(rep, DISP_LOOKUP_NEG))
-                rep->lock_policy_res2 = 0;
+	    mdt_get_disposition(rep, DISP_LOOKUP_NEG) &&
+	    !mdt_get_disposition(rep, DISP_OPEN_CREATE))
+		rep->lock_policy_res2 = 0;
 
 	lhc->mlh_reg_lh.cookie = 0ull;
         if (rc == -ENOTCONN || rc == -ENODEV ||
